# cal-scheduler-mcp

./: .gitignore  AGENTS.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  RELEASE_PROCESS.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish.yml
scripts/: check_version_alignment.py
src/cal_scheduler/: __init__.py  config.py  ical.py  server.py  store.py  timezones.py
tests/: test_configure.py  test_doctor.py  test_events.py  test_recurrence.py  test_timezones.py
